# Weather-App

./: manage.py  pyproject.toml
WeatherApp/: asgi.py  settings.py  urls.py  wsgi.py
core/: urls.py  utils.py  views.py
core/templates/core/: weather_page.html
static/css/: style.css
templates/: base.html
