[tool.poetry]
name = "weatherapp"
version = "0.1.0"
description = ""
authors = ["Denis Tokarev <wf.denis.tokarev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
django-debug-toolbar = "^4.3.0"
redis = "^5.0.3"
hiredis = "^2.3.2"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
